Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.14-dev-150-g00f14ee https://git.reactos.org/?p=reactos.git;a=commit;h=00f14ee1f22a1c285462459f859fa17c90ccc19f
Description
I noticed for a long time already, that there are cases when the listview headers may vanish.
It took me ages to find the exact reproduction steps, but finally I succeeded today and therefore the bug is finally actionable.
So please do follow the repro-steps to the very point!
Reproduction steps
- make sure to run an explorer filebrowser in windowed mode
- navigate into C:\ReactOS\system32 with explorer file browser
- switch to Details View
- scroll to the very bottom of the view
- maximize the window
Expected result
the listViews header should still be visible
Observed result
the listView header vanishes
0.4.15-dev-751-g7d44c1c_affected.webm
0.4.15-dev-751-g7d44c1c_affected.log
I think I have seen this happening also with other apps. I don't think that it is limited to the file browser. I suspect the bug to be in comctl32 or in Win32SS.
Attachments
Issue Links
- blocks
-
CORE-5648 GUI perception problems
-
- Open
-
-
CORE-15505 TASKMGR: Column headers don't scroll when scrolling horizontally (or they do scroll, but the cyclic refresh resets the headers position)
-
- Resolved
-
-
CORE-16441 Syncing ReactOS with Wine Staging 4.18
-
- Resolved
-
- is duplicated by
-
CORE-16574 comctl32 listview does not update the topmost row upon scrolling, observable in rapps
-
- Resolved
-
-
CORE-16988 Column headers in list view disappear when column autosize is used on a "scrolled down" list
-
- Resolved
-