[0.4.14][COMCTL32] Listview: Only apply horizontal offset when setting header position CORE-17674

This imports
Wine commit https://github.com/wine-mirror/wine/commit/d92906249fd4abd75d5d2ee2fba966855fac2e4c#diff-7f0ae6301b1f6ea1128640b76cd831308e24466f15399de6d5040557b79f0f16
Signed-off-by: Nikolay Sivov <nsivov@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>
Thanks to Doug Lyons who picked the fix for us from Wine 6.0

It fixes for us CORE-17674 "Corruption of the listview header"
which regressed by 0.4.14-dev-150-g 00f14ee1f22a1c285462459f859fa17c90ccc19f
when we synced to Wine Staging 4.18

Testbot results of the patch:
KVM https://reactos.org/testman/compare.php?ids=78225,78270 LGTM
VBox https://reactos.org/testman/compare.php?ids=78226,78271 LGTM

Fix picked from 0.4.15-dev-2918-g a5365194f4b7f85ab0b3e086ad2e25a9e9b29694