dll/win32/comctl32/listview.c
@@ -11243,7 +11243,6 @@ static void LISTVIEW_UpdateSize(LISTVIEW_INFO *infoPtr)
 
         rect = infoPtr->rcList;
         rect.left += origin.x;
-        rect.top += origin.y;
 
         hl.prc = &rect;
 	hl.pwpos = &wp;
